--- a/place1.html
+++ b/place1.html
@@ -14,7 +14,7 @@
 </div>
 <br>
 
-<h2> Resnet Top Match Result</h2>
+<h2> Resnet</h2>
 <br>
 
 <div class="row">
@@ -28,12 +28,17 @@
     <br>
     <p>Image</p>
   </div>
+  <div class="column">
+    <h3>Top Match Result</h3>
+    <br>
+    <p>Image</p>
+  </div>
 </div>
 
 <br>
 <br>
 
-<h2> Transformer Top Match Result</h2>
+<h2> Transformer</h2>
 <br>
 
 <div class="row">
@@ -47,6 +52,11 @@
     <br>
     <p>Image</p>
   </div>
+  <div class="column">
+    <h3>Top Match Result</h3>
+    <br>
+    <p>Image</p>
+</div>
 </div>
 
 <br>
