--- a/index.html
+++ b/index.html
@@ -1,31 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link href="style.css" rel="stylesheet" />
-    <title>Visual Place Recognition Visualization</title>
-  </head>
 
-  <body>
+<head>
+  <meta charset="UTF-8" />
+  <link href="style.css" rel="stylesheet" />
+  <title>Visual Place Recognition Visualization</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
 
-    <div class = "container">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
-    <header class="main-header">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+</head>
+
+<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+
+
+<body>
+  <header class="main-header">
+    <div class='header-content'>
       <h1>Visual Place Recognition Visualization</h1>
-
       <nav>
         <a href="#">Video</a>
         <a href="#">Github</a>
       </nav>
-    </header>
+    </div>
+  </header>
+  <div style='width: 100vw; background-color: #D5D2C1;'>
+    <div style='display: flex; flex-direction: column; align-items: center;'>
 
+      <div class='intro'>
+        In this project, we investigated the question of whether we can improve Visual Place Recognition (VPR) by using Self-supervised representation learning (SSRL). Recent studies on SSRL show very promising results that SSRL has the potential to improve all vision tasks through its exceptional ability to extract high-level image features. VPR is a task highly dependent on the quality of the extracted features. Therefore, we combined different SSRL methods with the NetVLAD layer to perform VPR. We benchmarked three SSRL methods, Masked Autoencoders(MAE), SimCLR, and Variational Autoencoder (VAE), against the CNN-based NetVLAD on NYU-VPR dataset. We visualize the result and found out that SSRL methods have a negative influence on the VPR performance, together with our explanations and in-depth analysis.
+      </div>
+
+      
 	<h2>Select a spot: </h2>
   
 
-<img alt="Map" class="map" src="map.png"/>
-      <a class = "place1" href="place1.html">&#9679</a>
-      <a class = "place2" href="place2.html">&#10003</a>
-      <a class = "place3" href="place3.html">&#10008</a>
+  <img alt="Map" class="map" src="map.png"/>
+        <a class = "place1" href="place1.html">&#9679</a>
+        <a class = "place2" href="place2.html">&#10003</a>
+        <a class = "place3" href="place3.html">&#10008</a>
+  
+  <br>
+    </body>
 
-  </body>
+    </div>
+  </div>
+</body>
 </html>
