--- a/index.html
+++ b/index.html
@@ -37,9 +37,11 @@
   
 
   <img alt="Map" class="map" src="map.png"/>
-        <a class = "place1" href="place1.html">&#9679</a>
+        <a class = "place1" href="place1.html">&#10003</a>
+        <a class = "place2" href="place2.html">&#9679</a>
+        <!-- <a class = "place1" href="place1.html">&#9679</a>
         <a class = "place2" href="place2.html">&#10003</a>
-        <a class = "place3" href="place3.html">&#10008</a>
+        <a class = "place3" href="place3.html">&#10008</a> -->
   
   <br>
     </body>
