--- a/place1.html
+++ b/place1.html
@@ -66,9 +66,9 @@
   </div>
 
   <div class = "label">
-      <p class = "Query_label">Query image location: &#9873;</p>
-      <p class = "Resnet_label">Resnet output location: &#9679</p>
-      <p class = "Sim_label">SimCLR output location: &#9733;</p>
+      <p class = "Query_label">Query image location: &#9873 </p>
+      <p class = "Resnet_label">Resnet output location: &#9679  Distance error: 0.1m </p>
+      <p class = "Sim_label">SimCLR output location: &#9733 Distance error: 4.68m </p>
   </div>
 
   <br>
