--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
         <a class = "place1" href="place1.html">&#10003</a>
         <a class = "place2" href="place2.html">&#9679</a>
         <a class = "place3" href="place3.html">&#10003</a>
+        <a class = "place4" href="place4.html">&#10008</a>
+        <a class = "place5" href="place4.html">&#9679</a>
         <!-- <a class = "place1" href="place1.html">&#9679</a>
         <a class = "place2" href="place2.html">&#10003</a>
         <a class = "place3" href="place3.html">&#10008</a> -->
