Added video link

--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
     <div class='header-content'>
       <h1>Visual Place Recognition Visualization</h1>
       <nav>
-        <a href="#">Video</a>
-        <a href="#">Github</a>
+        <a href="https://youtu.be/1LPonfhzUrg">Video</a>
       </nav>
     </div>
   </header>
